Pair with Angel on fixing info table row value overflow

--- a/ui/app/styles/helper-classes/general.scss
+++ b/ui/app/styles/helper-classes/general.scss
@@ -97,6 +97,13 @@
   overflow: hidden;
 }
 
+.text-overflow-ellipsis {
+  width: 500px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 // screen reader only
 .sr-only {
   border: 0;
